[gd_scene load_steps=14 format=3 uid="uid://flpa4on2t8e3"]

[ext_resource type="Script" uid="uid://bo10hq38evinq" path="res://actors/mechanisms/latch_mechanism.gd" id="1_k2u0o"]
[ext_resource type="Script" uid="uid://bi2ox86m0yg1y" path="res://scripts/components/hookable_component.gd" id="3_t0rci"]
[ext_resource type="Script" uid="uid://dtpuy1iftshns" path="res://scripts/meterial_overlayer.gd" id="4_gbovt"]
[ext_resource type="ArrayMesh" uid="uid://cf6vj6nj6dlgh" path="res://Assets/canister_Cylinder_004.res" id="4_y5f50"]
[ext_resource type="ArrayMesh" uid="uid://bg1xfn3geniap" path="res://Assets/canister_Cylinder_005.res" id="5_0nbqj"]
[ext_resource type="Material" uid="uid://ypg1md42sf1m" path="res://shaders/materials/yellow_outline.tres" id="5_goe2f"]
[ext_resource type="Script" uid="uid://b6pqa311a7k0c" path="res://scripts/components/mouse_over_component.gd" id="6_uh6p8"]
[ext_resource type="PackedScene" uid="uid://wwkbjrq1iad4" path="res://effects/gas_emission_effect.tscn" id="7_gbovt"]
[ext_resource type="AudioStream" uid="uid://cjkmlgrt2f54u" path="res://sounds/rcs-thrusters/rcs-thruster-loop-non-muffled.ogg" id="7_goe2f"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_k2u0o"]
height = 2.4174805
radius = 0.96972656

[sub_resource type="BoxShape3D" id="BoxShape3D_k2u0o"]
size = Vector3(1.7050781, 1, 0.16381836)

[sub_resource type="BoxShape3D" id="BoxShape3D_70ipd"]
size = Vector3(0.14038086, 0.15820313, 2.763794)

[sub_resource type="BoxShape3D" id="BoxShape3D_gbovt"]
size = Vector3(1.9365234, 1, 3.0361328)

[node name="LatchMechanizm" type="RigidBody3D"]
collision_mask = 21
mass = 1000.0
script = ExtResource("1_k2u0o")
retraction_acceleration = 40.0
strength_exponent = 1.0

[node name="SliderJoint3D" type="SliderJoint3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -1)
node_a = NodePath("..")
node_b = NodePath("../Latch")
linear_limit/upper_distance = 0.0
linear_limit/lower_distance = -2.1

[node name="GasSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_goe2f")

[node name="GasEmissionEffectFront" parent="." instance=ExtResource("7_gbovt")]
transform = Transform3D(-1.0000001, 0, -8.7422784e-08, 0, 1, 0, 8.7422784e-08, 0, -1.0000001, 0, 0.027950525, -1)
amount = 600
lifetime = 0.3

[node name="GasEmissionEffectLeft" parent="." instance=ExtResource("7_gbovt")]
transform = Transform3D(-0.49999994, 0, -0.86602557, 0, 1, 0, 0.86602557, 0, -0.49999994, 0, 0.027950525, -1)

[node name="GasEmissionEffectRight" parent="." instance=ExtResource("7_gbovt")]
transform = Transform3D(-0.5000001, 0, 0.8660253, 0, 1, 0, -0.8660253, 0, -0.5000001, 0, 0.027950525, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 9.124325e-09, 0.20874023)
shape = SubResource("CylinderShape3D_k2u0o")

[node name="Graphics" type="MeshInstance3D" parent="."]
transform = Transform3D(0.915, 0, 0, 0, 0.915, 0, 0, 0, 0.915, 0, 0, 0.68167615)
mesh = ExtResource("4_y5f50")
skeleton = NodePath("../..")

[node name="HousingAttachment" type="Generic6DOFJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.4136789)
node_a = NodePath("..")

[node name="Latch" type="RigidBody3D" parent="."]
collision_mask = 21
mass = 2000.0

[node name="Handle" type="CollisionShape3D" parent="Latch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5724021)
shape = SubResource("BoxShape3D_k2u0o")

[node name="Shaft" type="CollisionShape3D" parent="Latch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.10920632)
shape = SubResource("BoxShape3D_70ipd")

[node name="Graphics" type="MeshInstance3D" parent="Latch"]
transform = Transform3D(0.885, 0, 0, 0, 0.885, 0, 0, 0, 0.885, 0, 0, -0.03954482)
mesh = ExtResource("5_0nbqj")
skeleton = NodePath("../../..")

[node name="HookableComponent" type="Node" parent="Latch"]
script = ExtResource("3_t0rci")
metadata/_custom_type_script = "uid://bi2ox86m0yg1y"

[node name="UnhookSelection" type="Node" parent="Latch" node_paths=PackedStringArray("meshes")]
script = ExtResource("4_gbovt")
meshes = [NodePath("../Graphics")]
material_overlay = ExtResource("5_goe2f")
metadata/_custom_type_script = "uid://dtpuy1iftshns"

[node name="MouseOverComponent" type="Node" parent="Latch"]
script = ExtResource("6_uh6p8")
metadata/_custom_type_script = "uid://b6pqa311a7k0c"

[node name="MouseOverableArea" type="Area3D" parent="Latch"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Latch/MouseOverableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.19116211)
shape = SubResource("BoxShape3D_gbovt")
